JumpScript/tests/baselines/reference/modifiersOnInterfaceIndexSignature1.errors.txt
tests/cases/compiler/modifiersOnInterfaceIndexSignature1.jump(2,3): error TS1071: 'public' modifier cannot appear on an index signature.


==== tests/cases/compiler/modifiersOnInterfaceIndexSignature1.jump (1 errors) ====
    interface I {
      public [a: string]: number;
      ~~~~~~
!!! error TS1071: 'public' modifier cannot appear on an index signature.
    }